--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,37 @@
 # Fix Colors
-set -g default-terminal "screen-256color"
-set -as terminal-features ",xterm-256color:RGB"
+#set -g default-terminal "screen-256color"
+#set -as terminal-features ",xterm-256color:RGB"
 
 # Fix ESC delay when using vim inside tmux
-set -sg escape-time 0
+#set -sg escape-time 0
+
+set -g mouse on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Shift + Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "nordtheme/tmux"
+set -g @plugin "tmux-plugins/tmux-yank"
+
+# Set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
