Add configs for neovim, emacs, and tmux
Neovim:
  - comment.nvim
  - indent-blackline.nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@
 
 # Fix ESC delay when using vim inside tmux
 #set -sg escape-time 0
-
+set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
 # Start windows and panes at 1, not 0
