move status bar to top of terminal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# change location of tmux bar
+set -g status-position top
+
 # Shift + Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
